# arato-python-sdk

./: .gitignore  DOCUMENTATION.md  PUBLISHING.md  README.md  TESTING.md  example.py  pyproject.toml  pytest.ini  requirements-test.txt  sdk-api-spec.yaml
.github/workflows/: publish.yml
arato_client/resources/: experiments.py
examples/: README.md  ask_your_erp_agent.py  ask_your_erp_agent_aws_bedrock.py  async_usage.py  delete_notebook.py  error_handling.py  experiments_and_runs.py  notebooks_and_datasets.py  quickstart.py  similarity_eval_example.py
examples/tutorials/: advanced_toxicity_classification.csv  llm_as_a_judge.ipynb  llm_as_judge.ipynb  production_user_queries.csv  toxicity_test_cases.csv
tests/: __init__.py  test_notebooks.py
