[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arato-client"
version = "1.0.0"
description = "Python SDK for the Arato API"
readme = "README.md"
authors = [
  { name="Arato AI", email="support@arato.ai" },
]
license = { text="MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://arato.ai"
Documentation = "https://help.arato.ai/en/"